--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Progressive Foods</title>
+        <title>Ninja Foods</title>
         <link rel="stylesheet" href="./css/materialize.min.css" />
         <link
             rel="stylesheet"
@@ -16,7 +16,7 @@
     <body class="grey lighten-4">
         <nav class="z-depth-0">
             <div class="nav-wrapper container">
-                <a href="/">Food <span>Progressive</span></a>
+                <a href="/">Food <span>Ninja</span></a>
                 <span class="right grey-text text-darken-1">
                     <i
                         class="material-icons sidenav-trigger"
