--- a/index.html
+++ b/index.html
@@ -39,5 +39,68 @@
                 </a>
             </li>
         </ul>
+
+        <div class="recipes container grey-text text-darken-1">
+            <div class="card-panel recipe white row">
+                <img src="./img/dish.png" alt="recipe thumb" />
+                <div class="recipe-details">
+                    <div class="recipe-title">Edame Noodles</div>
+                    <div class="recipe-ingredients">
+                        Edame Beans, Noodles, Garlic oil
+                    </div>
+                </div>
+                <div class="recipe-delete">
+                    <i class="material-icons">delete_outline</i>
+                </div>
+            </div>
+            <div class="card-panel recipe white row">
+                <img src="./img/dish.png" alt="recipe thumb" />
+                <div class="recipe-details">
+                    <div class="recipe-title">Edame Noodles</div>
+                    <div class="recipe-ingredients">
+                        Edame Beans, Noodles, Garlic oil
+                    </div>
+                </div>
+                <div class="recipe-delete">
+                    <i class="material-icons">delete_outline</i>
+                </div>
+            </div>
+            <div class="card-panel recipe white row">
+                <img src="./img/dish.png" alt="recipe thumb" />
+                <div class="recipe-details">
+                    <div class="recipe-title">Edame Noodles</div>
+                    <div class="recipe-ingredients">
+                        Edame Beans, Noodles, Garlic oil
+                    </div>
+                </div>
+                <div class="recipe-delete">
+                    <i class="material-icons">delete_outline</i>
+                </div>
+            </div>
+            <div class="card-panel recipe white row">
+                <img src="./img/dish.png" alt="recipe thumb" />
+                <div class="recipe-details">
+                    <div class="recipe-title">Edame Noodles</div>
+                    <div class="recipe-ingredients">
+                        Edame Beans, Noodles, Garlic oil
+                    </div>
+                </div>
+                <div class="recipe-delete">
+                    <i class="material-icons">delete_outline</i>
+                </div>
+            </div>
+            <div class="card-panel recipe white row">
+                <img src="./img/dish.png" alt="recipe thumb" />
+                <div class="recipe-details">
+                    <div class="recipe-title">Edame Noodles</div>
+                    <div class="recipe-ingredients">
+                        Edame Beans, Noodles, Garlic oil
+                    </div>
+                </div>
+                <div class="recipe-delete">
+                    <i class="material-icons">delete_outline</i>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
