--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <div class="card-panel recipe white row">
                 <img src="./img/dish.png" alt="recipe thumb" />
                 <div class="recipe-details">
-                    <div class="recipe-title">Edame Noodles</div>
+                    <div class="recipe-title">Edamame Noodles</div>
                     <div class="recipe-ingredients">
-                        Edame Beans, Noodles, Garlic oil
+                        Edamame Beans, Noodles, Garlic oil
                     </div>
                 </div>
                 <div class="recipe-delete">
@@ -56,9 +56,9 @@
             <div class="card-panel recipe white row">
                 <img src="./img/dish.png" alt="recipe thumb" />
                 <div class="recipe-details">
-                    <div class="recipe-title">Edame Noodles</div>
+                    <div class="recipe-title">Edamame Noodles</div>
                     <div class="recipe-ingredients">
-                        Edame Beans, Noodles, Garlic oil
+                        Edamame Beans, Noodles, Garlic oil
                     </div>
                 </div>
                 <div class="recipe-delete">
@@ -68,9 +68,9 @@
             <div class="card-panel recipe white row">
                 <img src="./img/dish.png" alt="recipe thumb" />
                 <div class="recipe-details">
-                    <div class="recipe-title">Edame Noodles</div>
+                    <div class="recipe-title">Edamame Noodles</div>
                     <div class="recipe-ingredients">
-                        Edame Beans, Noodles, Garlic oil
+                        Edamame Beans, Noodles, Garlic oil
                     </div>
                 </div>
                 <div class="recipe-delete">
@@ -80,9 +80,9 @@
             <div class="card-panel recipe white row">
                 <img src="./img/dish.png" alt="recipe thumb" />
                 <div class="recipe-details">
-                    <div class="recipe-title">Edame Noodles</div>
+                    <div class="recipe-title">Edamame Noodles</div>
                     <div class="recipe-ingredients">
-                        Edame Beans, Noodles, Garlic oil
+                        Edamame Beans, Noodles, Garlic oil
                     </div>
                 </div>
                 <div class="recipe-delete">
@@ -92,15 +92,24 @@
             <div class="card-panel recipe white row">
                 <img src="./img/dish.png" alt="recipe thumb" />
                 <div class="recipe-details">
-                    <div class="recipe-title">Edame Noodles</div>
+                    <div class="recipe-title">Edamame Noodles</div>
                     <div class="recipe-ingredients">
-                        Edame Beans, Noodles, Garlic oil
+                        Edamame Beans, Noodles, Garlic oil
                     </div>
                 </div>
                 <div class="recipe-delete">
                     <i class="material-icons">delete_outline</i>
                 </div>
             </div>
+        </div>
+
+        <div class="center">
+            <a
+                class="btn-floating btn-sm add-btn sidenav-trigger"
+                data-target="side-form"
+            >
+                <i class="material-icons">add</i>
+            </a>
         </div>
     </body>
 </html>
