Add a form to create recipes

--- a/index.html
+++ b/index.html
@@ -111,5 +111,33 @@
                 <i class="material-icons">add</i>
             </a>
         </div>
+
+        <div id="side-form" class="sidenav side-form">
+            <form class="add-recipe container-section">
+                <h6>New Recipe</h6>
+                <div class="divider"></div>
+                <div class="input-field">
+                    <input
+                        type="text"
+                        id="title"
+                        placeholder="e.g. Ninja soup"
+                        class="validate"
+                    />
+                    <label for="title">Recipe Title</label>
+                </div>
+                <div class="input-field">
+                    <input
+                        type="text"
+                        id="ingredients"
+                        placeholder="e.g. Tofu, mushroom, garlic"
+                        class="validate"
+                    />
+                    <label for="ingredients"></label>
+                </div>
+                <div class="input-field center">
+                    <button class="btn-small">Add</button>
+                </div>
+            </form>
+        </div>
     </body>
 </html>
