--- a/pages/about.html
+++ b/pages/about.html
@@ -13,6 +13,9 @@
         <link rel="stylesheet" href="../css/styles.css" />
         <script src="../js/materialize.min.js"></script>
         <link rel="manifest" href="./manifest.json" />
+        <!-- iOS support -->
+        <link rel="apple-touch-icon" href="../img/icons/icon-96x96.png" />
+        <meta name="apple-mobile-web-app-status-bar" content="#aa7700" />
     </head>
     <body class="grey lighten-4">
         <nav class="z-depth-0">
