--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
             </form>
         </div>
 
+        <script src="./js/app.js"></script>
         <script src="./js/ui.js"></script>
     </body>
 </html>
